improved frontend experience for eg, scroll to result div at the end of ajaz call, resolved header not wrapping whole page on a small screen etc

--- a/static/myStyle.css
+++ b/static/myStyle.css
@@ -31,7 +31,7 @@ body {
 
 
 /* Column container */
-.row {  
+.ro {  
     display: flex;
     flex-wrap: wrap;
 }
@@ -41,8 +41,8 @@ body {
 .side {
     flex: 30%;
     background-color:#E5EFF1;
-    padding-left: 30px;
-    padding-right: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
     padding-top: 25px;
     padding-bottom: 100px;
     color:black;
@@ -52,8 +52,8 @@ body {
 .main {
     flex: 70%;
     background-color: white;
-    padding-left: 20px;
-    padding-right: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 /* Footer */
@@ -79,7 +79,7 @@ body {
   padding: 5px;
 }
 
-.row1{
+/* .row1{
   flex: 25%;
   padding: 5px;
 }
@@ -87,9 +87,9 @@ body {
 .row2{
   flex: 30%;
   padding: 5px;
-}
+}*/
 
-.row10 {
+.probe-heading {
   text-align: center;
 }
 .submit-button {
@@ -101,13 +101,12 @@ body {
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
-.row, .header {   
+/* .row, .header {   
   flex-direction: column;
-}
-body {
-  display: flex;
+} */
+/* body {
   flex-direction: column;
-}
+} */
 table.all_peers td:nth-of-type(2),
 table.all_peers td:nth-of-type(3),
 table.all_peers td:nth-of-type(6),
